--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<meta name="keywords" content="" />
 	<link rel="icon" href="favicon.png"/>
 	<link rel="stylesheet" href="css/normalize.css" />
-	<link rel="stylesheet" href="css/layout.css" />
+	<!-- <link rel="stylesheet" href="css/layout.css" /> -->
 	<link rel="stylesheet" href="css/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500" rel="stylesheet">
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,13 +22,41 @@
 <body>
 	<header class="ba-header">
 
+		<div class="ba-container">
+
+		<h1 class="logo">
+			<a href="" class="logo__link">Event</a>
+		</h1>
+
+		<nav>
+			<ul class="menu">
+				<li class="menu__item"><a href="#" class="menu__link">About</a></li>
+				<li class="menu__item"><a href="#" class="menu__link">Jury</a></li>
+				<li class="menu__item"><a href="#" class="menu__link">Compretitors</a></li>
+				<li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
+			</ul>
+		</nav>
+        </div>
 	</header>
 	<main role="main" >
+		
+
+		<section class="ba-hero">
+			<div class="ba-container">
+			<h2 class="ba-hero__title">Are you ready for the Battle</h2>
+			<p class="b-hero-text">The clash between graphic designers</p>
+			<a href="" class="ba-btn ba-hero__btn">Download Our Case Study</a>
+			</div>
+		</section>
 
 	</main>
+
+
 	<footer class="ba-footer">
 
 	</footer>
+
+	
 	<script src="js/main.js"></script>
 </body>
 </html>
