--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Start</title>
+	<title>Events</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,7 @@
 		<div class="ba-container">
 
 		<h1 class="logo">
-			<a href="" class="logo__link">Event</a>
+			<a href="#" class="logo__link">Event</a>
 		</h1>
 
 		<nav>
@@ -49,6 +49,195 @@
 			</div>
 		</section>
 
+		<section class="ba-container">
+		<div class="about-us">
+			<h2 class="about-us__title">Design Battles</h2>
+			<p>
+				Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
+			</p>
+
+			<h3 class="arrow__title">What is the course of the Battles?</h3>
+			<div class="list">
+				<div class="arrow-list">
+					<div class="arrow-item">
+						<span class="arrow">&gt;</span>
+						<span class="number">01.</span>
+						<span class="arrow-text">
+							Cras ultricies ligula sed mag.
+						</span>
+					</div>
+					<div class="arrow-item">
+						<span class="arrow">&gt;</span>
+						<span class="number">02.</span>
+						<span class="arrow-text">
+							Pellentesque in ipsum id orci porta dapibus.
+						</span>
+					</div>
+					<div class="arrow-item">
+						<span class="arrow">&gt;</span>
+						<span class="number">03.</span>
+						<span class="arrow-text">
+							Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+						</span>
+					</div>
+				</div>
+				<div class="arrow-list">
+					<div class="arrow-item">
+						<span class="arrow">&gt;</span>
+						<span class="number">04.</span>
+						<span class="arrow-text">
+							Cras ultricies ligula sed magna dictum portaurabitur arcu.
+						</span>
+					</div>
+					<div class="arrow-item">
+						<span class="arrow">&gt;</span>
+						<span class="number">05.</span>
+						<span class="arrow-text">
+							Proin eget tortor risus. 
+						</span>
+					</div>
+					<div class="arrow-item">
+						<span class="arrow">&gt;</span>
+						<span class="number">06.</span>
+						<span class="arrow-text">
+							Nulla quis lorem ut libero malesuada feugiat.
+						</span>
+					</div>
+				</div>
+			</div>
+			<p >Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Nulla quis lorem ut libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam id dui posuere blandit. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.</p>
+
+			<h4>Submissions starts on 10/12/2017 and end on 11/12/2017</h4>
+
+			<p>Nulla quis lorem ut libero malesuada feugiat eget tincidunt nibh pulvinar.</p>
+
+			<a href="#" class="ba-btn arrow-btn">Download Our Case Study</a>
+		</div>
+		</section>
+
+		<section class="ba-battle">
+			<div class="ba-container">
+				<h3 class="ba-battle__title">They already said Battles</h3>
+				<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada. Estibulum ante ipsum primis in faucibus orci luctus et ultrices.</p>
+				<div class="ba-battle-people">
+					<div class="people">
+						<div class="persone">
+							<img src="img/john1.jpg" alt="John Stone">
+							<h6 class="persone-title">John Stone</h6>
+							<p class="about-person">Creative Director at Amazing Game</p>
+						</div>
+						<div class="persone">
+							<img src="img/john2.jpg" alt="John Stone">
+							<h6 class="persone-title">John Stone</h6>
+							<p class="about-person">Creative Director at Amazing Game</p>
+						</div>
+						<div class="persone">
+							<img src="img/john3.jpg" alt="John Stone">
+							<h6 class="persone-title">John Stone</h6>
+							<p class="about-person">Creative Director at Amazing Game</p>
+						</div>
+					</div>
+					<div class="people">
+						<div class="persone">
+							<img src="img/john4.jpg" alt="John Stone">
+							<h6 class="persone-title">John Stone</h6>
+							<p class="about-person">Creative Director at Amazing Game</p>
+						</div>
+						<div class="persone">
+							<img src="img/john5.jpg" alt="John Stone">
+							<h6 class="persone-title">John Stone</h6>
+							<p class="about-person">Creative Director at Amazing Game</p>
+						</div>
+						<div class="persone">
+							<img src="img/john6.jpg" alt="John Stone">
+							<h6 class="persone-title">John Stone</h6>
+							<p class="about-person">Creative Director at Amazing Game</p>
+						</div>
+					</div>
+				</div>
+				<div class="countdown">
+					<h3 class="countdown-title">Countdown</h3>
+					<div class="timer">
+						<div class="time">
+							<span class="numeral">
+								37
+							</span>
+							<span class="indicator">
+								days
+							</span>
+						</div>
+						<div class="time">
+							<span class="numeral">
+								13
+							</span>
+						    <span class="indicator">
+							    hours
+						    </span>
+					    </div>
+						<div class="time">
+							<span class="numeral">
+								45
+							</span>
+						    <span class="indicator">
+							    minutes
+						    </span>
+					    </div>
+						<div class="time">
+							<span class="numeral">
+								26
+							</span>
+						    <span class="indicator">
+							    seconds
+						    </span>
+					    </div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="sponsor">
+
+			<div class="ba-container">
+				<h3 class="sponsor-title">Sponsorship</h3>
+				<div class="sponsor-list">
+				 <div class="sponsor-img"><img src="img/speckyboy.jpg" alt="Speckyboy"></div>
+				 <div class="sponsor-img"><img src="img/dwb.jpg" alt="DWB"></div>
+				 <div class="sponsor-img"><img src="img/web.jpg" alt="Webdesign"></div>
+				 <div class="sponsor-img"><img src="img/instatnt.jpg" alt="instantShift"></div>
+			    </div>
+			</div>
+			
+		</section>
+
+		<section class="jury">
+			<div class="ba-container">
+				<h3 class="jury-title">Jury 2017</h3>
+				<div class="jury-judge">
+					<div class="jugge">
+						<img src="img/stone1.jpg" alt="Stone">
+						<h6 class="judge-title">John Stone</h6>
+						<p>Creative Director at Amazing Game</p>
+					</div>
+					<div class="jugge">
+						<img src="img/stone2.jpg" alt="Stone">
+						<h6 class="judge-title">John Stone</h6>
+						<p>Creative Director at Amazing Game</p>
+					</div>
+					<div class="jugge">
+						<img src="img/stone3.jpg" alt="Stone">
+						<h6 class="judge-title">John Stone</h6>
+						<p>Creative Director at Amazing Game</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="contact">
+			
+		</section>
+
+
+
 	</main>
 
 
@@ -56,7 +245,7 @@
 
 	</footer>
 
-	
+
 	<script src="js/main.js"></script>
 </body>
 </html>
