--- a/index.html
+++ b/index.html
@@ -233,15 +233,64 @@
 		</section>
 
 		<section class="contact">
-			
+			<div class="ba-container">
+
+			 <h3 class="contact-title">Contact Us</h3>
+
+			 <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Donec sollicitudin molestie malesuada.</p>
+
+			 <form class="contact-form">
+
+				<input type="text" placeholder="First Name" name="first_name" class="inp">
+				<input type="text" placeholder="Last Name" name="last_name" class="inp">
+				<br><br>
+				<input type="email" placeholder="Email" name="email" class="inp">
+				<input type="url" placeholder="Website" name="site" class="inp">
+				<br><br>
+				<textarea name="message" placeholder="Message"></textarea>
+				<br>
+				<input type="submit" class="contact-submit" value="send message">
+
+			 </form>
+            </div>
 		</section>
-
-
 
 	</main>
 
 
 	<footer class="ba-footer">
+		<div class="ba-container">
+
+			<h5 class="footer-title">Newsletter</h5>
+			<p>If you would like to hear first and to receive updates please subscribe to our newsletter.</p>
+
+			
+			<form class="footer-form">
+
+				<input type="email" placeholder="email address" name="address">
+				<input type="submit" value="Subscribe" name="button">
+
+			</form>
+
+	
+   <div class="network">
+    <ul class="img-wrapper">
+      <li>
+       <a href="https://twitter.com/" target="_blank"><img src="img/twitter.png" alt="twitter"></a>
+     </li>
+     <li>
+       <a href="https://dribbble.com/" target="_blank"><img src="img/dribble.png" alt="dribble"></a>
+     </li>
+     <li>
+       <a href="https://www.instagram.com" target="_blank"><img src="img/insta.png" alt="Instagramm"></a>
+     </li>
+      <li>
+       <a href="https://www.pinterest.com/" target="_blank"><img src="img/pinterest.png" alt="pinterest"></a>
+     </li>
+   </ul>
+ </div>
+			
+		</div>
 
 	</footer>
 
